Bug 162538 - [UI] Dialog Position and Size, changing Height will not be effective if no other control is touched before clicking OK (gtk3-only)
Summary: [UI] Dialog Position and Size, changing Height will not be effective if no o...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2024-08-21 13:11 UTC by Cor Nouws
Modified: 2024-11-24 11:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2024-08-21 13:11:14 UTC
Draw or Impress document with a shape selected
- F4
- go to Height
- change value and
- immediately click OK (alt+O, Enter)
 -> height is not changed

- F4
- go to Height
- change value
- tab to next control
- then click OK (alt+O, Enter)
 -> height is changed

Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: nl-NL (en_US.UTF-8); UI: en-US
Calc: threaded

(but the problem is there for .. ages?)
Comment 1 Rafael Lima 2024-08-22 00:43:43 UTC
I could not reproduce using kf5 (from Plasma 5)... clicking OK directly will resize the image.

Maybe a gtk3 issue? Although using SAL_USE_VCLPLUGIN=gtk3 libreoffice also worked when clicking Ok directly.

Tested with

Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.5-0ubuntu0.24.04.2
Calc: threaded
Comment 2 Buovjaga 2024-09-17 12:30:54 UTC
The current state began in 6.2 with 7725eff80a7bc3f3e422e56e1cd7bfa531f19a70
fix pow by digits

Before that there was welding work touching cui/source/tabpages/transfrm.cxx in 6d0d201b30122395eb164807b93d76d567ff970b 66cd438e3545edecaa05aa27beb289c6a6df53fc ebfb0d3950a8723e24baa330b80a0a560e381639
Comment 3 Caolán McNamara 2024-09-18 11:55:41 UTC
I think what happens is that the spinbuttons (and most things) update when they lose focus, and on ctrl+o to active the "ok" button, the ok button fires without gaining focus, so the spinbutton doesn't update at that time
Comment 4 Caolán McNamara 2024-09-18 12:13:49 UTC
I believe https://gerrit.libreoffice.org/c/core/+/173616 will resolve this
Comment 5 Commit Notification 2024-09-18 19:26:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1972d0d9d63639ce35096e412f3157a708dbb60a

Resolves: tdf#162538 explicitly make buttons gain focus on activatation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-09-18 19:27:57 UTC
This is sufficiently risky that I don't propose any backports, at least until there has been some time of real world use.
Comment 7 Buovjaga 2024-09-19 05:08:29 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d500848976b6244048684a9972322b582559910a
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 19 September 2024