Resolves: tdf#162538 explicitly make buttons gain focus on activatation

even if by keyboard. So spinbuttons that depend on losing focus to
update will update before 'ok' is called.

Change-Id: I1eddd4c29c3ffeb06ead058c9efbdfde01418589
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173616
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>